--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,8 @@ html {
 .header i,
 .tally-num i,
 .overlay-content button,
-.color {
+.color,
+.fa-info-circle {
   cursor: pointer;
 }
 
@@ -37,7 +38,7 @@ html {
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   max-width: 560px;
   margin: 0 auto;
   padding: 0 20px;
@@ -86,8 +87,9 @@ html {
   height: 50px;
   background-color: inherit;
   top: -55px;
-  left: 120px;
+  left: 15px;
   border-radius: 5px;
+  transition: left 0.6s;
 }
 
 /*/////////////////////////////////
@@ -109,7 +111,8 @@ html {
   align-items: center;
   flex-direction: column;
   flex-basis: 500px;
-  padding: 20px 0;
+  position: relative;
+  padding:  40px 0;
   margin: 0 auto;
   background-color: #ffffff;
   border-radius: 5px;
@@ -133,6 +136,12 @@ html {
   padding: 5px;
   background-color: black;
   color: white;
+}
+
+.close {
+  font-size: 1.5rem;
+  position: absolute;
+  top: 2px;
 }
 
 /*/////////////////////////////////
@@ -220,42 +229,33 @@ html {
 /*/////////////////////////////////
           tally colors
 /////////////////////////////////*/
-.color-white {
-  background-color: #FAFAFA;
+.color-white {background-color: #FAFAFA;}
+.color-red {background-color: #e63030;}
+.color-yellow {background-color: #e3bf30;}
+.color-green {background-color: #b0e330;}
+.color-seafoam {background-color: #5afaa2;}
+.color-lightblue{background-color: #57f0f2;}
+.color-blue {background-color: #5877f5;}
+.color-purple {background-color: #9d57f2;}
+.color-pink{background-color: #db58f5;}
+.color-darkpink {background-color: #de45a6;}
+
+
+/*/////////////////////////////////
+           Media Queries
+/////////////////////////////////*/
+@media (min-width: 750px) {
+  .info {
+    left: 120px;
+  }
 }
 
-.color-red {
-  background-color: #e63030;
-}
+@media (min-width: 540px) {
+  .close {
+    left: 465px;
+  }
 
-.color-yellow {
-  background-color: #e3bf30;
-}
-
-.color-green {
-  background-color: #b0e330;
-}
-
-.color-seafoam {
-  background-color: #5afaa2;
-}
-
-.color-lightblue{
-  background-color: #57f0f2;
-}
-
-.color-blue {
-  background-color: #5877f5;
-}
-
-.color-purple {
-  background-color: #9d57f2;
-}
-
-.color-pink{
-  background-color: #db58f5;
-}
-
-.color-darkpink {
-  background-color: #de45a6;
+  .container {
+    justify-content: space-between;
+  }
 }
