--- a/public/views/tallies.html
+++ b/public/views/tallies.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <tally ng-repeat="tally in ctrl.data" data="tally"></tally>
+  <tally ng-repeat="tally in ctrl.data | orderBy: 'task'" data="tally"></tally>
 </div>
