--- a/public/style.css
+++ b/public/style.css
@@ -108,7 +108,7 @@ html {
   font-size: 0.8rem;
   color: #ffffff;
   border-radius: 3px;
-  : 0 auto;
+  margin: 0 auto;
   padding: 3px;
 }
 
@@ -121,13 +121,13 @@ html {
   flex-wrap: wrap;
   justify-content: space-around;
   max-width: 560px;
-  : 0 auto;
+  margin: 0 auto;
   padding: 0 20px;
 }
 
 .nodata-message {
   color: #565656;
-  : 0 auto;
+  margin: 0 auto;
 }
 
 .nodata-message h2 {
@@ -142,7 +142,7 @@ html {
   width: 110px;
   height: 110px;
   border-radius: 5px;
-  -bottom: 15px;
+  margin-bottom: 15px;
   padding: 10px;
   text-align: center;
 }
@@ -203,7 +203,7 @@ html {
   flex-basis: 500px;
   position: relative;
   padding:  40px 0;
-  : 0 auto;
+  margin: 0 auto;
   background-color: #ffffff;
   border-radius: 5px;
   text-align: center;
